plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.hotak'
version = '0.0.1-SNAPSHOT'
description = 'noonchibot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

sourceSets {
    testnetTest {
        java.srcDir 'src/testnetTest/java'
        resources.srcDir 'src/testnetTest/resources'
        compileClasspath += sourceSets.main.output
        runtimeClasspath += output + compileClasspath
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    testnetTestImplementation.extendsFrom testImplementation
    testnetTestRuntimeOnly.extendsFrom testRuntimeOnly
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.web3j:core:4.12.0'
    implementation 'org.msgpack:jackson-dataformat-msgpack:0.9.11'
    implementation "com.google.guava:guava:33.5.0-jre"
    implementation 'com.github.ben-manes.caffeine:caffeine:3.2.3'
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.auth0:java-jwt:4.5.1'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    runtimeOnly 'com.mysql:mysql-connector-j'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.wiremock:wiremock-standalone:3.4.2'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('testnetTest', Test) {
    description = 'Runs tests that exercise testnet-facing integrations.'
    group = 'verification'
    testClassesDirs = sourceSets.testnetTest.output.classesDirs
    classpath = sourceSets.testnetTest.runtimeClasspath
    useJUnitPlatform()
    shouldRunAfter tasks.named('test')
}
